--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="img/logo.jpg" alt="Logo" class="logo">
-        <h2>Kerek Center</h2>
+        <h2>Маалымат киргизуу</h2>
         <form id="courseForm">
             <div class="form-group">
                 <input type="text" id="firstName" name="firstName" placeholder="Атыныз" required>
@@ -37,7 +37,7 @@
                 </div>
                 <input type="hidden" id="course" name="course" required>
             </div>
-            <button type="button" class="btn" onclick="goToPayment()">Next</button>
+            <button type="button" class="btn" onclick="goToPayment()">Алга</button>
         </form>
     </div>
 
